--- a/index.html
+++ b/index.html
@@ -14,40 +14,42 @@
   <!-----------------------------------Шапка------------------------------------->
   <!--  -->
   <header class="main-headline" id="header">
-    <h1 class="visually-hidden">DEVICE интернет-магазин гаджетов</h1>
-    <img class="header-logo" src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35">
-    <div class="box-user">
-      <form class="search" method="get" action="https://echo.htmlacademy.ru">
-        <input class="search-input" id="search-fld" type="search" name="search" placeholder="Поиск по сайту" required>
-        <button class="search-btn " type="submit">Найти</button>
-        <label class="search-lab" for="search-fld"><span class="visually-hidden">Поиск:</span></label>
-      </form>
-      <div class="box-user-inner">
-        <a class="login" href="#">Войти</a>
-        <div class="box-user-purchase">
-          <a class="compare" href="#">Сравнить</a>
-          <a class="cart" href="#">Корзина</a>
+    <div class="container container-headline">
+      <h1 class="visually-hidden">DEVICE интернет-магазин гаджетов</h1>
+      <img class="header-logo" src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35">
+      <div class="box-user">
+        <form class="search" method="get" action="https://echo.htmlacademy.ru">
+          <input class="search-input" id="search-fld" type="search" name="search" placeholder="Поиск по сайту" required>
+          <button class="search-btn " type="submit">Найти</button>
+          <label class="search-lab" for="search-fld"><span class="visually-hidden">Поиск:</span></label>
+        </form>
+        <div class="box-user-inner">
+          <a class="login" href="#">Войти</a>
+          <div class="box-user-purchase">
+            <a class="compare" href="#">Сравнить</a>
+            <a class="cart" href="#">Корзина</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="box-nav">
-      <nav class="main-nav">
-        <h2 class="main-nav-header">Каталог товаров</h2>
-        <div class="main-nav-box">
-          <ul class="main-nav-list">
-            <li class="main-nav-item"><a href="#">Виртуальная реальность</a></li>
-            <li class="main-nav-item"><a href="catalog.html">Моноподы для селфи</a></li>
-            <li class="main-nav-item"><a href="#">Экшн-камеры</a></li>
-            <li class="main-nav-item"><a href="#">Фитнес-браслеты</a></li>
-            <li class="main-nav-item"><a href="#">Умные часы</a></li>
-            <li class="main-nav-item"><a href="#">Квадрокоптеры</a></li>
-          </ul>
+      <div class="box-nav">
+        <nav class="main-nav">
+          <h2 class="main-nav-header">Каталог товаров</h2>
+          <div class="main-nav-box">
+            <ul class="main-nav-list">
+              <li class="main-nav-item"><a href="#">Виртуальная реальность</a></li>
+              <li class="main-nav-item"><a href="catalog.html">Моноподы для селфи</a></li>
+              <li class="main-nav-item"><a href="#">Экшн-камеры</a></li>
+              <li class="main-nav-item"><a href="#">Фитнес-браслеты</a></li>
+              <li class="main-nav-item"><a href="#">Умные часы</a></li>
+              <li class="main-nav-item"><a href="#">Квадрокоптеры</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="box-serv">
+          <a class="box-serv-deliver" href="#serv">Доставка</a>
+          <a class="box-serv-warranty" href="#serv">Гарантия</a>
+          <a class="box-serv-contacts" href="#contacts">Контакты</a>
         </div>
-      </nav>
-      <div class="box-serv">
-        <a class="box-serv-deliver" href="#serv">Доставка</a>
-        <a class="box-serv-warranty" href="#serv">Гарантия</a>
-        <a class="box-serv-contacts" href="#contacts">Контакты</a>
       </div>
     </div>
   </header>
@@ -262,7 +264,7 @@
             </a>
           </li>
         </ul>
-        <a class="copy" href="https://htmlacademy.ru/"><img class="web-dev-logo" src="img/logo-html.svg" alt="Разработано: HTML Academy" width="27" height="34"></a>
+        <a class="copy" href="https://htmlacademy.ru/intensive/htmlcss"><img class="web-dev-logo" src="img/logo-html.svg" alt="Разработано: HTML Academy" width="27" height="34"></a>
       </div>
     </div>
   </footer>
