Подогнал изображения слайдера под макет. Меню католога сделал резиновым

--- a/catalog.html
+++ b/catalog.html
@@ -14,45 +14,49 @@
   <!-----------------------------------Шапка------------------------------------->
   <!--  -->
   <header class="main-headline" id="header">
-   <div class="container container-headline catalog-headline">
+    <div class="container container-headline catalog-headline">
       <h1 class="visually-hidden">DEVICE интернет-магазин гаджетов</h1>
-     <a href="index.html"><img class="header-logo" src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35"></a>
-     <div class="box-user">
-       <form class="search" method="get" action="https://echo.htmlacademy.ru">
-         <input class="search-input" id="search-fld" type="search" name="search" placeholder="Поиск по сайту" required>
-         <button class="search-btn " type="submit">Найти</button>
-         <label class="search-lab" for="search-fld"><span class="visually-hidden">Поиск:</span></label>
-       </form>
-       <div class="box-user-inner">
-         <a class="login" href="#">Валентин Петухов</a>
-         <a class="log-out" href="#">Выйти</a>
-         <div class="box-user-purchase">
-           <a class="compare" href="#">Сравнить</a>
-           <a class="cart" href="#">Корзина</a>
-         </div>
-       </div>
-     </div>
-     <div class="box-nav">
-       <nav class="main-nav">
-         <h2 class="main-nav-header">Каталог товаров</h2>
-         <div class="main-nav-box">
-           <ul class="main-nav-list">
-             <li class="main-nav-item"><a href="#">Виртуальная реальность</a></li>
-             <li class="main-nav-item"><a href="#">Моноподы для селфи</a></li>
-             <li class="main-nav-item"><a href="#">Экшн-камеры</a></li>
-             <li class="main-nav-item"><a href="#">Фитнес-браслеты</a></li>
-             <li class="main-nav-item"><a href="#">Умные часы</a></li>
-             <li class="main-nav-item"><a href="#">Квадрокоптеры</a></li>
-           </ul>
-         </div>
-       </nav>
-       <div class="box-serv">
-         <a class="box-serv-deliver" href="index.html#serv">Доставка</a>
-         <a class="box-serv-warranty" href="index.html#serv">Гарантия</a>
-         <a class="box-serv-contacts" href="index.html#contacts">Контакты</a>
-       </div>
-     </div>
-   </div>
+      <a href="index.html"><img class="header-logo" src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35"></a>
+      <div class="box-user">
+        <form class="search" method="get" action="https://echo.htmlacademy.ru">
+          <input class="search-input" id="search-fld" type="search" name="search" placeholder="Поиск по сайту" required>
+          <button class="search-btn " type="submit">Найти</button>
+          <label class="search-lab" for="search-fld"><span class="visually-hidden">Поиск:</span></label>
+        </form>
+        <div class="box-user-inner">
+          <a class="login" href="#">Валентин Петухов</a>
+          <a class="log-out" href="#">Выйти</a>
+          <div class="box-user-purchase">
+            <a class="compare" href="#">Сравнить</a>
+            <a class="cart" href="#">Корзина</a>
+          </div>
+        </div>
+      </div>
+      <div class="box-nav">
+        <nav class="main-nav">
+          <h2 class="main-nav-header">Каталог товаров</h2>
+          <ul class="main-nav-list">
+            <li class="main-nav-item">
+              <a href="#">Виртуальная реальность</a>
+              <a href="catalog.html">Моноподы для селфи</a>
+              <a href="#">Экшн-камеры</a>
+            </li>
+            <li class="main-nav-item">
+              <a href="#">Фитнес-браслеты</a>
+              <a href="#">Умные часы</a>
+            </li>
+            <li class="main-nav-item">
+              <a href="#">Квадрокоптеры</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="box-serv">
+          <a class="box-serv-deliver" href="index.html#serv">Доставка</a>
+          <a class="box-serv-warranty" href="index.html#serv">Гарантия</a>
+          <a class="box-serv-contacts" href="index.html#contacts">Контакты</a>
+        </div>
+      </div>
+    </div>
   </header>
   <main class="catalog">
     <!-- ----------------------------Хлебные крошки---------------------------- -->
@@ -66,35 +70,35 @@
         </ul>
       </section>
     </div>
-          <!-- ----------------------------Сортировка---------------------------- -->
-      <div class="container-sorting">
-          <section class="sorting">
-            <h2 class="sorting-title">Сортировка:</h2>
-            <ul class="sorting-type">
-              <li class="type-item type-item-active">
-                <a href="#">По цене</a>
-              </li>
-              <li class="type-item">
-                <a href="#">По типу</a>
-              </li>
-              <li class="type-item">
-                <a href="#">По популярности</a>
-              </li>
-            </ul>
-            <ul class="sorting-order">
-              <li class="order-item order-item-active">
-                <a class="order-up" href="#">
-                  <span class="visually-hidden">По возрастанию</span>
-                </a>
-              </li>
-              <li class="order-item">
-                <a class="order-down" href="#">
-                  <span class="visually-hidden">По убыванию</span>
-                </a>
-              </li>
-            </ul>
-          </section>
-        </div>
+    <!-- ----------------------------Сортировка---------------------------- -->
+    <div class="container-sorting">
+      <section class="sorting">
+        <h2 class="sorting-title">Сортировка:</h2>
+        <ul class="sorting-type">
+          <li class="type-item type-item-active">
+            <a href="#">По цене</a>
+          </li>
+          <li class="type-item">
+            <a href="#">По типу</a>
+          </li>
+          <li class="type-item">
+            <a href="#">По популярности</a>
+          </li>
+        </ul>
+        <ul class="sorting-order">
+          <li class="order-item order-item-active">
+            <a class="order-up" href="#">
+              <span class="visually-hidden">По возрастанию</span>
+            </a>
+          </li>
+          <li class="order-item">
+            <a class="order-down" href="#">
+              <span class="visually-hidden">По убыванию</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </div>
     <!-- ----------------------------Фильтр товаров---------------------------- -->
     <div class="container container-main">
       <section class="item-filter">
@@ -157,8 +161,7 @@
           <button class="item-form-btn" type="submit">Показать</button>
         </form>
       </section>
-
-        <!-- ----------------------------Список товаров---------------------------- -->
+      <!-- ----------------------------Список товаров---------------------------- -->
       <div class="container-goods">
         <section class="items">
           <h2 class="visually-hidden">Список товаров</h2>
@@ -176,7 +179,6 @@
             </li>
             <li class="item">
               <img class="item-image" src="img/item-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
-              <span class="item-new">NEW</span>
               <div class="item-hover">
                 <a class="btn-to-cart" href="#">В корзину</a>
                 <a class="btn-to-compare" href="#">Добавить к сравнению</a>
@@ -188,7 +190,6 @@
             </li>
             <li class="item">
               <img class="item-image" src="img/item-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
-              <span class="item-new">NEW</span>
               <div class="item-hover">
                 <a class="btn-to-cart" href="#">В корзину</a>
                 <a class="btn-to-compare" href="#">Добавить к сравнению</a>
@@ -200,6 +201,7 @@
             </li>
             <li class="item">
               <img class="item-image" src="img/item-4.jpg" alt="Селфи-палка &laquo;Следуй за мной&raquo;" width="360" height="380">
+              <span class="item-new">NEW</span>
               <div class="item-hover">
                 <a class="btn-to-cart" href="#">В корзину</a>
                 <a class="btn-to-compare" href="#">Добавить к сравнению</a>
@@ -211,7 +213,7 @@
             </li>
           </ul>
         </section>
-<!-- ============================Пагинация==================== -->
+        <!-- ============================Пагинация==================== -->
         <div class="pagination">
           <a class="pagination-btn pagination-btn-back" href="#"><span>НАЗАД</span></a>
           <ul class="pagination-list">
