--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
       <div class="box-nav">
         <nav class="main-nav">
           <h2 class="main-nav-header">Каталог товаров</h2>
-          <div class="main-nav-box">
-            <ul class="main-nav-list">
-              <li class="main-nav-item"><a href="#">Виртуальная реальность</a></li>
-              <li class="main-nav-item"><a href="catalog.html">Моноподы для селфи</a></li>
-              <li class="main-nav-item"><a href="#">Экшн-камеры</a></li>
-              <li class="main-nav-item"><a href="#">Фитнес-браслеты</a></li>
-              <li class="main-nav-item"><a href="#">Умные часы</a></li>
-              <li class="main-nav-item"><a href="#">Квадрокоптеры</a></li>
-            </ul>
-          </div>
+          <ul class="main-nav-list">
+            <li class="main-nav-item">
+              <a href="#">Виртуальная реальность</a>
+              <a href="catalog.html">Моноподы для селфи</a>
+              <a href="#">Экшн-камеры</a>
+            </li>
+            <li class="main-nav-item">
+              <a href="#">Фитнес-браслеты</a>
+              <a href="#">Умные часы</a>
+            </li>
+            <li class="main-nav-item">
+              <a href="#">Квадрокоптеры</a>
+            </li>
+          </ul>
         </nav>
         <div class="box-serv">
           <a class="box-serv-deliver" href="#serv">Доставка</a>
@@ -70,7 +74,7 @@
       <section class="hit-item-box hit-item-box-1">
         <h3 class="visually-hidden ">Селфи палка</h3>
         <div class="hit-item-pic">
-          <img src="img/slider-1.png" alt="Селфи палка выполнена в чёрном цвете с небольшими синими вставками. Шлёфка у основания рукояти." width="384" height="486">
+          <img class="hit-item-pic-1" src="img/slider-1.png" alt="Селфи палка выполнена в чёрном цвете с небольшими синими вставками. Шлёфка у основания рукояти." width="384" height="486">
         </div>
         <div class="hit-item-desc">
           <p class="slogan">Делай селфи,<br>как Бен Стиллер!<br></p>
@@ -96,7 +100,7 @@
       <section class="hit-item-box hit-item-box-2">
         <h3 class="visually-hidden ">Фитнес браслет</h3>
         <div class="hit-item-pic">
-          <img src="img/slider-2.png" alt="Чёрный фитнес браслет с миниатюрным монохромным дисплеем по ширине ремешка. Ремешок силиконовый, чёрного цвета со ребристой поверхностью." width="345" height="485">
+          <img class="hit-item-pic-2" src="img/slider-2.png" alt="Чёрный фитнес браслет с миниатюрным монохромным дисплеем по ширине ремешка. Ремешок силиконовый, чёрного цвета со ребристой поверхностью." width="345" height="485">
         </div>
         <div class="hit-item-desc">
           <p class="slogan">Худеем<br>правильно!</p>
@@ -114,7 +118,7 @@
       <section class="hit-item-box hit-item-box-3">
         <h3 class="visually-hidden ">Квадрокоптер с лазером</h3>
         <div class="hit-item-pic">
-          <img src="img/slider-3.png" alt="Корпус узкий, вытянутый вверх и удлиненный. Каркас сделан из углеводородного волокна, а к корпусу он крепиться с помощью двух планок. Две планки, размещенные перпендикулярно корпусу, держат пропеллеры, отчего внешний вид квадрокоптера отдаленно напоминает букву «Н». Во время полета опоры квадрокоптера могут подниматься вверх и не загораживать линию огня для лазера." width="526" height="334">
+          <img class="hit-item-pic-3" src="img/slider-3.png" alt="Корпус узкий, вытянутый вверх и удлиненный. Каркас сделан из углеводородного волокна, а к корпусу он крепиться с помощью двух планок. Две планки, размещенные перпендикулярно корпусу, держат пропеллеры, отчего внешний вид квадрокоптера отдаленно напоминает букву «Н». Во время полета опоры квадрокоптера могут подниматься вверх и не загораживать линию огня для лазера." width="526" height="334">
         </div>
         <div class="hit-item-desc">
           <p class="slogan">Порхает как бабочка, жалит как пчела!</p>
