Добавил префиксы, подключил минимизированные css и js, убрал комментарии

--- a/catalog.html
+++ b/catalog.html
@@ -6,13 +6,10 @@
   <meta name="description" content="Гаджеты по доступным ценам. Доставка по России. Гарантия возврата. Работаем без выходных.">
   <title>DEVICE интернет-магазин гаджетов</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 
 <body>
-  <!--  -->
-  <!-----------------------------------Шапка------------------------------------->
-  <!--  -->
   <header class="main-headline" id="header">
     <div class="container container-headline catalog-headline">
       <h1 class="visually-hidden">DEVICE интернет-магазин гаджетов</h1>
@@ -59,7 +56,6 @@
     </div>
   </header>
   <main class="catalog">
-    <!-- ----------------------------Хлебные крошки---------------------------- -->
     <div class="container">
       <h2 class="catalog-title">Моноподы для селфи</h2>
       <section class="breadcrumbs">
@@ -70,7 +66,6 @@
         </ul>
       </section>
     </div>
-    <!-- ----------------------------Сортировка---------------------------- -->
     <div class="container-sorting">
       <section class="sorting">
         <h2 class="sorting-title">Сортировка:</h2>
@@ -99,7 +94,6 @@
         </ul>
       </section>
     </div>
-    <!-- ----------------------------Фильтр товаров---------------------------- -->
     <div class="container container-main">
       <section class="item-filter">
         <h2>Фильтр:</h2>
@@ -161,7 +155,6 @@
           <button class="item-form-btn" type="submit">Показать</button>
         </form>
       </section>
-      <!-- ----------------------------Список товаров---------------------------- -->
       <div class="container-goods">
         <section class="items">
           <h2 class="visually-hidden">Список товаров</h2>
@@ -213,7 +206,6 @@
             </li>
           </ul>
         </section>
-        <!-- ============================Пагинация==================== -->
         <div class="pagination">
           <a class="pagination-btn pagination-btn-back" href="#"><span>НАЗАД</span></a>
           <ul class="pagination-list">
@@ -226,7 +218,6 @@
       </div>
     </div>
   </main>
-  <!-- ----------------------------Подвал---------------------------- -->
   <footer>
     <div class="box-ftr">
       <div class="box-ftr-1">
