--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
   <meta name="description" content="Гаджеты по доступным ценам. Доставка по России. Гарантия возврата. Работаем без выходных.">
   <title>DEVICE интернет-магазин гаджетов</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 
 <body>
-  <!--  -->
-  <!-----------------------------------Шапка------------------------------------->
-  <!--  -->
   <header class="main-headline" id="header">
     <div class="container container-headline">
       <h1 class="visually-hidden">DEVICE интернет-магазин гаджетов</h1>
@@ -58,9 +55,6 @@
     </div>
   </header>
   <main>
-    <!--  -->
-    <!-- ----------------------------------Слайдер------------------------------------->
-    <!--  -->
     <section class="slider-hits">
       <h2 class="visually-hidden">Промо-слайдер</h2>
       <input class="visually-hidden" type="radio" id="hit-item-1" name="slider-ctr" checked>
@@ -138,9 +132,6 @@
         </div>
       </section>
     </section>
-    <!--  -->
-    <!-- ----------------------------------Популярные товары------------------------------------->
-    <!--  -->
     <section class="product-nav">
       <h2 class="visually-hidden">Популярные товары</h2>
       <ul class="pop-goods-list">
@@ -152,9 +143,6 @@
         <li class="pop-goods-item pop-item-6"><a href="#">Квадрокоптеры</a></li>
       </ul>
     </section>
-    <!--  -->
-    <!-- ----------------------------------Сервис------------------------------------->
-    <!--  -->
     <section class="services" id="serv">
       <h2 class="visually-hidden">Сервис</h2>
       <div class="box-services">
@@ -182,9 +170,6 @@
         </div>
       </div>
     </section>
-    <!--  -->
-    <!-- ----------------------------------Популярные бренды------------------------------------->
-    <!--  -->
     <section class="pop-brands">
       <h2 class="visually-hidden">Популярные бренды</h2>
       <ul class="pop-brands-list">
@@ -206,9 +191,6 @@
         </li>
       </ul>
     </section>
-    <!--  -->
-    <!-- ------------------------------------Контакты------------------------------------->
-    <!--  -->
     <div class="box-contacts">
       <section class="benefits">
         <h2 class="benefits-header">О нас</h2>
@@ -229,9 +211,6 @@
       </section>
     </div>
   </main>
-  <!--  -->
-  <!-- ------------------------------------Подвал------------------------------------->
-  <!--  -->
   <footer>
     <div class="box-ftr">
       <div class="box-ftr-1">
@@ -272,9 +251,6 @@
       </div>
     </div>
   </footer>
-  <!--  -->
-  <!-- -------------------------------Модальные окна--------------------------------->
-  <!--  -->
   <section class="modal modal-fb">
     <h2 class="visually-hidden">Форма обратной связи</h2>
     <form action="https://echo.htmlacademy.ru" class="fb-form" method="post">
@@ -300,7 +276,7 @@
     <iframe class="modal-map-frame" src="https://yandex.ru/map-widget/v1/-/CCQpFR~6" width="960" height="560" allowfullscreen></iframe>
     <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
   </section>
-  <script src="js/script.js"></script>
+  <script src="js/script-min.js"></script>
 </body>
 
 </html>
