Исправил ошибки первой попытки защиты проекта
Б4.
Грубые ошибки в разметке отсутствуют.
1. http://joxi.ru/VrwvwPQU7KzVxA - на главной лучше оставить ссылку ( тег a ), и удалить из него атрибут href;
2. http://joxi.ru/Q2K96KxtL9R9yr - почему не ссылкой? Думаю страница "КАТАЛОГ ТОВАРОВ" то должна существовать;

3. http://joxi.ru/L21Ea1jcR6J6q2 - можно обойтись без br;
Б9.
Подключены правильные шрифты, их размеры, высота строк, цвет и толщина равны соответствующим параметрам в макетах и техническом задании.
1. http://joxi.ru/4AknYPOToMGyg2 - цвет другой;
2. http://joxi.ru/LmGBz63cwRLe7r - цвет другой;
3. http://joxi.ru/VrwvwPQU7Kz4zA - текст в макете имеет прозрачность;

п.с. Не совсем правильно подключены шрифты http://joxi.ru/l2Z9yJVtz83wQm
Б11.
При наполнении контентом (как в макете) элементы каждой страницы соответствуют макету.
1. http://joxi.ru/a2X9k8etwydwjA - попробуй использовать неразрывный пробел => https://codepen.io/andrii91/pen/wRZPMP ;
2. http://joxi.ru/V2V9Xyetd0eKKm
Д8.
При использовании блочно-строчных элементов явно указывайте вертикальное выравнивание
http://joxi.ru/823B37jc96ODWm - нет явно указанного вертикального выравнивание;
Д11.
Все состояния элементов (смотрите styleguide.psd) прописаны в стилевом файле.
1. https://gyazo.com/77c5e850ab5afdb61a9e4f0ee26d3ddb - при наведении в макете другие эффекты;
2. http://joxi.ru/Q2K96KxtL9Rvxr - при наведении у кнопки нет прозрачности в макете;
3. https://gyazo.com/41db9fddaf8b59a67bfec2f0c5637030 - если мы сейчас находимся на текущей страницу или это активный элемент ( в случаи с фильтрацией ) то зачем нам эффекты? Они ведь никуда не приведут;
4. https://gyazo.com/5fa9e739667625970265ad29fdde8e30 - аналогично тут, зачем эффекты если мы уже на текущей странице;
Д25.
Нет глобальных стилей тегов.
Есть глобальные стили тегов:
http://joxi.ru/VrwvwPQU7KzjzA
http://joxi.ru/n2Y91NztbjO712
Д19.
Вёрстка проходит тест на переполнение контентом.
http://joxi.ru/823B37jc96OaWm - выпадает за пределы блока и не переносит

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
   <header class="main-headline" id="header">
     <div class="container container-headline catalog-headline">
       <h1 class="visually-hidden">DEVICE интернет-магазин гаджетов</h1>
-      <a href="index.html"><img class="header-logo" src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35"></a>
+      <a class="header-logo" href="index.html"><img src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35"></a>
       <div class="box-user">
         <form class="search" method="get" action="https://echo.htmlacademy.ru">
           <input class="search-input" id="search-fld" type="search" name="search" placeholder="Поиск по сайту" required>
@@ -31,7 +31,7 @@
       </div>
       <div class="box-nav">
         <nav class="main-nav">
-          <h2 class="main-nav-header">Каталог товаров</h2>
+          <h2 class="main-nav-header"><a href="#">Каталог товаров</a></h2>
           <ul class="main-nav-list">
             <li class="main-nav-item">
               <a href="#">Виртуальная реальность</a>
@@ -59,10 +59,10 @@
     <div class="container">
       <h2 class="catalog-title">Моноподы для селфи</h2>
       <section class="breadcrumbs">
-        <ul>
+        <ul class="breadcrumbs-list">
           <li class="breadcrumbs-item"><a href="index.html">Главная</a></li>
           <li class="breadcrumbs-item"><a href="#">Каталог товаров</a></li>
-          <li class="breadcrumbs-item"><a>Моноподы для селфи</a></li>
+          <li class="breadcrumbs-item breadcrumbs-item-active"><a>Моноподы для селфи</a></li>
         </ul>
       </section>
     </div>
@@ -71,7 +71,7 @@
         <h2 class="sorting-title">Сортировка:</h2>
         <ul class="sorting-type">
           <li class="type-item type-item-active">
-            <a href="#">По цене</a>
+            <a>По цене</a>
           </li>
           <li class="type-item">
             <a href="#">По типу</a>
@@ -82,7 +82,7 @@
         </ul>
         <ul class="sorting-order">
           <li class="order-item order-item-active">
-            <a class="order-up" href="#">
+            <a class="order-up">
               <span class="visually-hidden">По возрастанию</span>
             </a>
           </li>
@@ -209,7 +209,7 @@
         <div class="pagination">
           <a class="pagination-btn pagination-btn-back" href="#"><span>НАЗАД</span></a>
           <ul class="pagination-list">
-            <li class="pagination-item pagination-item-active"><a href="#">1</a></li>
+            <li class="pagination-item pagination-item-active"><a>1</a></li>
             <li class="pagination-item"><a href="#">2</a></li>
             <li class="pagination-item"><a href="#">3</a></li>
           </ul>
@@ -218,7 +218,7 @@
       </div>
     </div>
   </main>
-  <footer>
+  <footer class="main-ftr">
     <div class="box-ftr">
       <div class="box-ftr-1">
         <a class="footer-logo" href="#header"><img src="img/logo-ftr.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35"></a>
