--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="main-headline" id="header">
     <div class="container container-headline">
       <h1 class="visually-hidden">DEVICE интернет-магазин гаджетов</h1>
-      <img class="header-logo" src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35">
+      <a class="header-logo header-logo-index"><img src="img/logo.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35"></a>
       <div class="box-user">
         <form class="search" method="get" action="https://echo.htmlacademy.ru">
           <input class="search-input" id="search-fld" type="search" name="search" placeholder="Поиск по сайту" required>
@@ -30,7 +30,7 @@
       </div>
       <div class="box-nav">
         <nav class="main-nav">
-          <h2 class="main-nav-header">Каталог товаров</h2>
+          <h2 class="main-nav-header"><a href="#">Каталог товаров</a></h2>
           <ul class="main-nav-list">
             <li class="main-nav-item">
               <a href="#">Виртуальная реальность</a>
@@ -71,22 +71,22 @@
           <img class="hit-item-pic-1" src="img/slider-1.png" alt="Селфи палка выполнена в чёрном цвете с небольшими синими вставками. Шлёфка у основания рукояти." width="384" height="486">
         </div>
         <div class="hit-item-desc">
-          <p class="slogan">Делай селфи,<br>как Бен Стиллер!<br></p>
+          <p class="slogan">Делай селфи,<br>как Бен Стиллер!</p>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
           <a class="hit-about-btn" href="catalog.html">Подробнее</a>
           <span class="visually-hidden">Характеристики</span>
           <dl class="list-feature">
             <div class="feature-box">
-              <dt>Длина палки</dt>
-              <dd>8,5 м</dd>
+              <dt class="feature-term">Длина палки</dt>
+              <dd class="feature-desc">8,5 м</dd>
             </div>
             <div class="feature-box">
-              <dt>Вес палки</dt>
-              <dd>5 кг</dd>
+              <dt class="feature-term">Вес палки</dt>
+              <dd class="feature-desc">5 кг</dd>
             </div>
             <div class="feature-box">
-              <dt>Материал</dt>
-              <dd>Карбон</dd>
+              <dt class="feature-term">Материал</dt>
+              <dd class="feature-desc">Карбон</dd>
             </div>
           </dl>
         </div>
@@ -103,8 +103,8 @@
           <span class="visually-hidden">Характеристики</span>
           <dl class="list-feature">
             <div class="feature-box">
-              <dt>Без подзарядки</dt>
-              <dd>48 часов</dd>
+              <dt class="feature-term">Без подзарядки</dt>
+              <dd class="feature-desc">48 часов</dd>
             </div>
           </dl>
         </div>
@@ -121,12 +121,12 @@
           <span class="visually-hidden">Характеристики</span>
           <dl class="list-feature">
             <div class="feature-box">
-              <dt>Дальность полета</dt>
-              <dd>800 м</dd>
+              <dt class="feature-term">Дальность полета</dt>
+              <dd class="feature-desc">800 м</dd>
             </div>
             <div class="feature-box">
-              <dt>Радиус&#160;поражения</dt>
-              <dd>50м</dd>
+              <dt class="feature-term">Радиус&#160;поражения</dt>
+              <dd class="feature-desc">50м</dd>
             </div>
           </dl>
         </div>
@@ -136,7 +136,7 @@
       <h2 class="visually-hidden">Популярные товары</h2>
       <ul class="pop-goods-list">
         <li class="pop-goods-item pop-item-1"><a href="#">Виртуальная реальность</a></li>
-        <li class="pop-goods-item pop-item-2"><a href="catalog.html">Моноподы для селфи</a></li>
+        <li class="pop-goods-item pop-item-2"><a href="catalog.html">Моноподы для&#160;селфи</a></li>
         <li class="pop-goods-item pop-item-3"><a href="#">Экшн-камеры</a></li>
         <li class="pop-goods-item pop-item-4"><a href="#">Фитнес-браслеты</a></li>
         <li class="pop-goods-item pop-item-5"><a href="#">Умные часы</a></li>
@@ -195,7 +195,7 @@
       <section class="benefits">
         <h2 class="benefits-header">О нас</h2>
         <p>Огромный выбор гаджетов не оставит равнодушным гика, который&#160;есть&#160;в каждом из нас.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки&#160;России! DEVICE работает со многими транспортными компаниями:</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
         <ul class="delivery-list">
           <li class="delivery-item">Деловые Линии</li>
           <li class="delivery-item">Автотрейдинг</li>
@@ -211,7 +211,7 @@
       </section>
     </div>
   </main>
-  <footer>
+  <footer class="main-ftr">
     <div class="box-ftr">
       <div class="box-ftr-1">
         <a class="footer-logo" href="#header"><img src="img/logo-ftr.svg" alt="DEVICE интернет-магазин гаджетов" width="163" height="35"></a>
